Test/git-issues/git-issue-845-comments2.dfy.expect
git-issue-845-comments2.dfy(9,24): Error: invalid NameSegment
1 parse errors detected in git-issue-845-comments2.dfy
